--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mysql-connector-python==8.2.0
 orjson==3.9.10
+protobuf==4.21.12
 pydantic==2.5.2
 pydantic-extra-types==2.1.0
 pydantic-settings==2.1.0
