--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 annotated-types==0.6.0
 anyio==3.7.1
 asgiref==3.7.2
-async-timeout==4.0.3
+black==23.11.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
@@ -10,7 +10,6 @@ dnspython==2.4.2
 email-validator==2.1.0.post1
 exceptiongroup==1.2.0
 fastapi==0.104.1
-fastapi-limiter==0.1.5
 greenlet==3.0.1
 h11==0.14.0
 httpcore==1.0.2
@@ -20,9 +19,14 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mypy-extensions==1.0.0
 mysql-connector-python==8.2.0
 orjson==3.9.10
+packaging==23.2
+pathspec==0.11.2
+platformdirs==4.0.0
 protobuf==4.21.12
+psycopg2-binary==2.9.9
 pydantic==2.5.2
 pydantic-extra-types==2.1.0
 pydantic-settings==2.1.0
@@ -30,12 +34,12 @@ pydantic_core==2.14.5
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
-redis==4.6.0
 requests==2.31.0
 sniffio==1.3.0
 SQLAlchemy==2.0.23
 sqlparse==0.4.4
 starlette==0.27.0
+tomli==2.0.1
 typing_extensions==4.8.0
 ujson==5.8.0
 urllib3==2.1.0
