--- a/Dockerfile-django
+++ b/Dockerfile-django
@@ -10,8 +10,10 @@ COPY . /app
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Make port 8001 available to the world outside this container
-EXPOSE 8001
+# Make port 8000 available to the world outside this container
+EXPOSE 8000
 
-# Run the FastAPI application when the container launches
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+ 
+
+# Run app.py when the container launches
+CMD ["python3", "hr_app/manage.py", "runserver", "0.0.0.0:8000"]
