--- a/api/.env.example
+++ b/api/.env.example
@@ -2,3 +2,7 @@ MAX_CALLS=10
 TIME_FRAME=60
 API_KEY=1234
 API_KEY_NAME=X-API-Key
+DB_USER=postgres
+DB_PASSWORD=1234
+DB_HOST=postgres
+DB_SCHEMA=postgres
