--- a/hr_app/.env.example
+++ b/hr_app/.env.example
@@ -1,3 +1,4 @@
 API_KEY=1234
 API_KEY_NAME=X-API-Key
-API_URL=http://localhost:8001/
+API_URL_FE=http://localhost:8001/v1/
+API_URL=http://fastapi:8001/v1/
