--- a/api/.env.example
+++ b/api/.env.example
@@ -5,4 +5,6 @@ API_KEY_NAME=X-API-Key
 DB_USER=postgres
 DB_PASSWORD=1234
 DB_HOST=localhost
+# change to postgres if using docker
+# DB_HOST=postgres
 DB_SCHEMA=postgres
